--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script
+  src="http://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -30,8 +34,8 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a href="#"><p class="navbar-brand"><img src="assets/images/logo.svg" height="100px"
-					width="140px" alt=""></p></a>
+				<a href="#"><p class="navbar-brand"><img src="assets/images/logo.svg" height="200px"
+					width="240px" alt=""></p></a>
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
@@ -58,6 +62,21 @@
 			</div><!-- /.container-fluid -->
 		</nav>
 		<h3 class="end-text">Comienza una nueva vida y unete al mundo tecnológico</h3>
+	</div>
+	<div class="middle">
+		<div class="row">
+		<p class="images">
+			<div class="col-md-offset-1 col-md-3">
+				<img class="image" src="assets/images/coffee.svg" alt="">
+			</div>
+			<div class="col-md-3">
+				<img class="image" src="assets/images/screen.svg" alt="">
+			</div>
+			<div class="col-md-3">
+				<img class="image" src="assets/images/door.svg" alt="">
+			</div>
+			</p>
+		</div>
 	</div>
 </body>
 </html>
