Actualize el archivo index.html

--- a/index.html
+++ b/index.html
@@ -65,18 +65,36 @@
 	</div>
 	<div class="middle">
 		<div class="row">
+		<h3 class="min-text pat">Beneficios</h3>
 		<p class="images">
 			<div class="col-md-offset-1 col-md-3">
-				<img class="image" src="assets/images/coffee.svg" alt="">
+				<p class="images" ><img class="image" src="assets/images/coffee.svg" alt="">
+				<h4 class="min-text">Curso Intensivo</h4>
+				<p class="p-text">En programas de 12 a 30 semanas intensivos aprende todo lo que necesitas para entrar al mercado laboral, diurno o vespertino. Son cursos presenciales apoyados con material digital en nuestra plataforma especializada</p></p>
 			</div>
 			<div class="col-md-3">
-				<img class="image" src="assets/images/screen.svg" alt="">
+				<p class="images"><img class="image" src="assets/images/screen.svg" alt="">
+				<h4 class="min-text">Curso Intensivo</h4>
+				<p class="p-text">En programas de 12 a 30 semanas intensivos aprende todo lo que necesitas para entrar al mercado laboral, diurno o vespertino. Son cursos presenciales apoyados con material digital en nuestra plataforma especializada</p></p>
 			</div>
 			<div class="col-md-3">
-				<img class="image" src="assets/images/door.svg" alt="">
+				<p class="images"><img class="image" src="assets/images/door.svg" alt="">
+				<h4 class="min-text">Curso Intensivo</h4>
+
+				<p class="p-text">En programas de 12 a 30 semanas intensivos aprende todo lo que necesitas para entrar al mercado laboral, diurno o vespertino. Son cursos presenciales apoyados con material digital en nuestra plataforma especializada</p></p>
 			</div>
 			</p>
 		</div>
+		<div class="col-md-offset-2 col-md-8 quote">
+				<div class="col-md-2"><img src="assets/images/clean_is_good.jpg" class="profile img-circle" alt=""></div>
+				<div class="col-md-10 quote-text">
+					<h4 class="min-text quote-text">Aprender a programar me dio la libertad de concretizar mis
+ideas. Antes era frustrante darme cuenta que para hacer lo
+que quería necesitaba desarrolladores, pero con el BootCamp
+de programación web de DL fue como ganar super poderes.</h4>
+<h5>Nicolás Melgarejo | Fundador de TIClASS</h5>
+				</div>
+			</div>
 	</div>
 </body>
 </html>
