--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<script
-  src="http://code.jquery.com/jquery-3.2.1.js"
-  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-  crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -34,8 +30,8 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a href="#"><p class="navbar-brand"><img src="assets/images/logo.svg" height="200px"
-					width="240px" alt=""></p></a>
+				<a href="#"><img class="navbar-brand" src="assets/images/logo.svg" height="300px"
+					width="340px" alt=""></a>
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
@@ -85,9 +81,10 @@
 			</div>
 			</p>
 		</div>
-		<div class="col-md-offset-2 col-md-8 quote">
-				<div class="col-md-2"><img src="assets/images/clean_is_good.jpg" class="profile img-circle" alt=""></div>
-				<div class="col-md-10 quote-text">
+		<div class="row">
+		<div class="col-md-offset-2 col-xs-offset-2 col-sm-offset-2 col-sm-8 col-md-8 col-xs-offset-2 col-xs-8 quote">
+				<div class="col-md-2 col-xs-6"><img src="assets/images/clean_is_good.jpg" class="profile img-circle" alt=""></div>
+				<div class="col-md-10 col-xs-6 quote-text">
 					<h4 class="min-text quote-text">Aprender a programar me dio la libertad de concretizar mis
 ideas. Antes era frustrante darme cuenta que para hacer lo
 que quería necesitaba desarrolladores, pero con el BootCamp
@@ -96,5 +93,24 @@ de programación web de DL fue como ganar super poderes.</h4>
 				</div>
 			</div>
 	</div>
+	</div>
+	<footer class="footer">
+	<p class="ta">
+		<img src="assets/images/icon_white.svg" alt="" height="40px">
+		<br>
+		<i class="fa fa-map-marker" aria-hidden="true"></i>
+		<span>Ezequias Alliende 2361</span>
+		<br>
+		<i class="fa fa-envelope" aria-hidden="true"></i>
+		<span>inscripciones@desafiolatam.com</span>
+		<br>
+		<i class="fa fa-mobile" aria-hidden="true"></i>
+		<span>+56 9 5117 7975</span>
+	</p>
+	</footer>
+		<script
+  src="http://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
 </body>
 </html>
